--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "nodemailer": "^6.9.0"
@@ -10,9 +11,8 @@
   "bin": {
     "nodejs": "bin/www.js"
   },
-  "devDependencies": {},
   "scripts": {
-    "start":"node ./bin/www.js",
+    "start": "node ./bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
